# ros-learning

./: README.md
Backup/: README.md  baxter_simu.sh  baxter_simu_ros.sh  establish_reference.sh  establish_reference.sh~  establish_ros_learning.sh  establish_ros_learning.sh~
Backup/baxter_simulator/: README_wsn
Backup/baxter_simulator/baxter_gazebo/worlds/: baxter_beer_table.world
Backup/camera_calibration/: CMakeLists.txt
Backup/camera_calibration/calibration_files/: calib_ir.yaml  calib_pose.yaml
Backup/camera_calibration/launch/: kinect2_transform.launch
Backup/camera_calibration/src/: calibration_solver.cpp  transform_test_calculator.m
Backup/cwru_srv/: README.md  package.xml
EECS400-Homework/peng_node_service/: package.xml~
EECS400-Homework/peng_node_service/launch/: peng_nodes.launch~
EECS400-Homework/peng_node_service/msg/: Para.msg
EECS400-Homework/peng_node_service/src/: minimal_commander.cpp~  minimal_controller.cpp
EECS400-Homework/peng_nodes/: CMakeLists.txt~
EECS400-Homework/peng_nodes/src/: minimal_subscriber.cpp
EECS400-Homework/peng_nodes_action/: CMakeLists.txt~
EECS400-Homework/peng_nodes_action/action/: monitor.action
EECS400-Homework/peng_nodes_action/launch/: peng_nodes.launch~
EECS400-Homework/peng_nodes_action/src/: minimal_commander.cpp~  minimal_controller.cpp  minimal_controller.cpp~
EECS400-Homework/ps1/peng_nodes/: package.xml
EECS400-Homework/ps1/peng_nodes/src/: minimal_commander.cpp
EECS400-Homework/ps2/peng_node_service/: CMakeLists.txt~  package.xml
EECS400-Homework/ps3/peng_nodes_action/: CMakeLists.txt  package.xml
EECS400-Homework/ps3/peng_nodes_action/launch/: peng_nodes_action.launch~
EECS400-Homework/ps3/peng_nodes_action/src/: action_client.cpp  action_client.cpp~  minimal_commander.cpp
EECS400-Homework/ps4/: README.md
EECS400-Homework/ps4/joint1_controller/: package.xml~
EECS400-Homework/ps4/joint2_controller/: CMakeLists.txt~  package.xml~
EECS400-Homework/ps4/robot_description/: CMakeLists.txt  package.xml
EECS400-Homework/ps4/robot_description/launch/: two_dof_robot.launch
EECS600-Homework/my_interesting_moves/: CMakeLists.txt
EECS600-Homework/my_interesting_moves/src/: Baxter_right_arm.cpp  my_interesting_moves.cpp  traj_action_client_pre_pose.cpp  traj_inter_as.cpp  traj_interpolator_as.cpp
EECS600-Homework/ps1/peng_nodes/: CMakeLists.txt
EECS600-Homework/ps2/peng_node_service/: CMakeLists.txt
EECS600-Homework/ps4/joint1_controller/: CMakeLists.txt  CMakeLists.txt~  package.xml
EECS600-Homework/ps4/joint2_controller/: CMakeLists.txt  package.xml
EECS600-Homework/ps4/joint2_controller/src/: joint2_commander.cpp  joint2_controller.cpp
EECS600-Homework/ps4/robot_description/: two_dof_robot.urdf  two_dof_robot.urdf~
EECS600-Homework/ps5/: README.md
EECS600-Homework/ps5/joints_controller/: CMakeLists.txt  CMakeLists.txt~  package.xml
EECS600-Homework/ps5/robot_trajectory/: CMakeLists.txt~  package.xml
EECS600-Homework/ps5/robot_trajectory/src/: robot_trajectory_action_client.cpp  robot_trajectory_action_server.cpp  robot_trajectory_action_server.cpp~
EECS600-Homework/ps6/: README.md  Requirement.md  baxter_simu.sh
EECS600-Homework/ps6/PS6_Peng/: roslint_result.txt
EECS600-Homework/ps6/my_interesting_moves/: CMakeLists.txt  package.xml
EECS600-Homework/ps6/peng_code/: url address.txt
EECS600-Homework/ps7/PS7_Peng/: Baxter_videos url location.txt
EECS600-Homework/ps8/: procedures.md
EECS600-Homework/ps8/peng_sensor_guided_motion/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
Exercise/baxter simulator/: README.md  baxter_simu.sh  how to run a script.md
Exercise/gazebo/: README.md  README.md~
Exercise/github/: github.md  github.md~
Exercise/how to install a .deb package in ubuntu/: how to install .deb package.md
Exercise/how to use a library/: how to use a library.md  how to use a library.md~
Exercise/model_visualization/: README.md  README.md~
Exercise/rviz/: README.md
Exercise/rviz/example_rviz_marker/: CMakeLists.txt~  package.xml~
Exercise/rviz/example_srv/: CMakeLists.txt~  package.xml
Exercise/sensors/: README.md  README.md~
Exercise/traj_msgs/minimal_robot_description/: minimal_robot_w_sensor.urdf
Exercise/urdf/: README.md  README.md~
ROS-Documents/: roslint.md
Reference/cwru_msgs/: README.md
Reference/cwru_msgs/cwru_action/: CMakeLists.txt  README.md  package.xml
Reference/cwru_msgs/cwru_msgs/: CMakeLists.txt  README.md  package.xml
Reference/cwru_srv/: CMakeLists.txt
Reference/eecs-397-f15/: README.md
Reference/eecs-397-f15/Documents/: Starting_Baxter.odt
Reference/eecs-397-f15/camera_calibration/: CMakeLists.txt  package.xml
Reference/eecs-397-f15/example_eigen/: CMakeLists.txt  README.md  package.xml
Reference/eecs-397-f15/example_eigen/src/: example_eigen_plane_fit.cpp  example_eigen_xforms.cpp
Reference/eecs-397-f15/example_robot_tf_listener/: CMakeLists.txt  README.md  package.xml
Reference/eecs-397-f15/example_ros_library/: CMakeLists.txt  README.md  package.xml
Reference/eecs-397-f15/example_ros_library_usage/: CMakeLists.txt  README.md  package.xml
Reference/external_packages/: README.md
Reference/external_packages/dynamixel_motor/: README.md
(+123 files in other folders)
