<?xml version="1.0"?>
<package>
  <name>peng_nodes_action</name>
  <version>0.0.0</version>
  <description>The peng_nodes_action package CREATED BY PENG</description>

  <maintainer email="peng.xu4@case.edu">Peng Xu</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
